--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,9 @@ ktor:
             - io.github.andspaulino.ApplicationKt.module
     deployment:
         port: 8080
+
+database:
+  url: jdbc:postgresql://localhost:5432/garage-manager-api
+  username: postgres
+  password: postgres
+  driver: org.postgresql.Driver
