--- a/infrastructure/src/main/resources/application.yaml
+++ b/infrastructure/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 ktor:
     application:
         modules:
-            - io.github.andspaulino.ApplicationKt.module
+            - ApplicationKt.module
     deployment:
         port: 8080
 
